--- a/second/index.css
+++ b/second/index.css
@@ -1,5 +1,8 @@
 body {
-    color: green;
+    color: SaddleBrown;
+    font-family: monospace;
+    font-style: oblique;
+    background-color: Snow;
 }
 
 div {
@@ -7,19 +10,67 @@ div {
     text-align:justify;
 }
 
-h1 {
-    color:DodgerBlue
+h1{
+    color:DodgerBlue;
+    font-family: serif;
 }
 
 h2 {
     color:blue;
+    font-family:sans-serif;
     text-align:center;
+}
+
+h2 > a  {
+  color: blue;
+  text-decoration: none;
 }
 
 p {
     text-indent: 3em;
+    background: #FFE4E1;
+    word-spacing: 6px;
 }
 
-.asd {
+p > a {
+  background: DarkSlateGray;
+  color: white;
+  text-decoration: none;
+}
+
+p > em {
+  color:Orange;
+  letter-spacing: 1em;
+  text-transform:capitalize;
+}
+
+p > span {
+  color:Blue;
+}
+
+#asd {
     color:blue;
+    font-size: 8pt;
+    font-weight: bold
+}
+
+.ssl {
+  text-align:center;
+  font-weight: bold;
+}
+
+#levels + ul {
+  color: green;
+}
+
+ul {
+  line-height:2;
+}
+
+li {
+  list-style-type: circle;
+}
+
+li > ul > li {
+  list-style-type: lower-greek;
 }
